<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoCall">

    <FrameLayout
        android:id="@+id/video_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/connectBtn"
        android:layout_marginBottom="683dp" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:text="@string/start_btn"
        android:backgroundTint="@color/princeton_orange"
        android:background="@drawable/box_layout"
        android:onClick="onClickStart"/>

    <Button
        android:id="@+id/connectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="67dp"
        android:layout_toRightOf="@id/startBtn"
        android:layout_marginBottom="5dp"
        android:text="@string/connect_btn"
        android:backgroundTint="@color/yellow_green"
        android:background="@drawable/box_layout"
        android:onClick="onClickConnect"/>

    <Button
        android:id="@+id/disconnectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:text="@string/disconnect_btn"
        android:backgroundTint="@color/spanish_crimson"
        android:background="@drawable/box_layout"
        android:onClick="onClickDisconnect"/>

</RelativeLayout>