<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/callBtn"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/space"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="@color/royal_purple"
        android:onClick="onClickedCall"
        android:text="@string/call_btn"
        android:textSize="35dp" />

    <Button
        android:id="@+id/scanBtn"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_toLeftOf="@id/space"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="@color/princeton_orange"
        android:onClick="onClickedScan"
        android:text="@string/scan_btn"
        android:textSize="35dp"/>

    <Button
        android:id="@+id/readBtn"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_below="@id/scanBtn"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/spaceSecond"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="@color/orange_yellow"
        android:onClick="onClickedRead"
        android:text="@string/read_btn"
        android:textSize="35dp"/>

    <TextView
        android:id="@+id/spaceSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <ToggleButton
        android:id="@+id/audioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/audioTxt"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/spaceSecond" />

    <ToggleButton
        android:id="@+id/notifyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notifyTxt"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/spaceSecond" />

    <TextView
        android:id="@+id/audioTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/callBtn"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="3dp"
        android:layout_toRightOf="@id/spaceSecond"
        android:text="@string/audio_txt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:background="@drawable/box_layout"/>

    <TextView
        android:id="@+id/notifyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/audioBtn"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/spaceSecond"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:text="@string/notify_txt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:background="@drawable/box_layout"/>

</RelativeLayout>

<!--<Button-->
<!--android:id="@+id/textBox"-->
<!--android:layout_width="200dp"-->
<!--android:layout_height="250dp"-->
<!--android:layout_below="@id/scanBtn"-->
<!--android:layout_alignParentRight="true"-->
<!--android:layout_marginLeft="3dp"-->
<!--android:layout_marginTop="3dp"-->
<!--android:layout_marginRight="3dp"-->
<!--android:layout_marginBottom="3dp"-->
<!--android:layout_toLeftOf="@id/readBtn"-->
<!--android:background="@drawable/round_btn"-->
<!--android:backgroundTint="@color/thistle"-->
<!--android:forceDarkAllowed="false"-->
<!--android:visibility="visible" />-->
